--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,12 @@
     grid-template-columns: 2fr 10fr;
     /* grid-gap: 10px; */
 }
+
+.app-wrapper-content {
+    grid-area: c;
+    background-color: cornflowerblue;
+}
+
+.app-wrapper-content img {
+    max-height: 200px;
+}
