--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,8 +1,8 @@
-.content {
+/* .content {
     grid-area: c;
     background-color: cornflowerblue;
-}
+} */
 
-.content img {
+/* .content img {
     max-height: 200px;
-}
+} */
